--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Login</h1>
 <label for="user">user</label>
 <input type="user">
+<BUTton></BUTton>
 <br>
 <label for="password">password</label>
 <input type="password">
